--- a/src/AppBundle/Resources/views/Role/show.html.twig
+++ b/src/AppBundle/Resources/views/Role/show.html.twig
@@ -11,12 +11,14 @@
             <a href="{{ path('role_index') }}" class="btn btn-default">
                 <span class="glyphicon glyphicon-arrow-left"></span> Back
             </a>
+            {% if is_granted('ROLE_CONTENT_ADMIN') %}
             <a href="{{ path('role_edit', { 'id': role.id }) }}" class="btn btn-default">
                 <span class='glyphicon glyphicon-edit'></span> Edit
             </a>
             <a href="{{ path('role_delete', { 'id': role.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Role?">
                 <span class='glyphicon glyphicon-remove'></span> Delete
             </a>
+            {% endif %}
         </div>
     </div>
     <table class="table table-bordered table-condensed table-hover table-striped">
