--- a/src/AppBundle/Resources/views/Work/search.html.twig
+++ b/src/AppBundle/Resources/views/Work/search.html.twig
@@ -12,15 +12,11 @@
 {% block body %}
 
     {{ form_start(form) }}
-    {{ form_row(form.title) }}
-    <div id="controls" class="collapse">
-        {{ form_rest(form) }}
-    </div>
+    {{ form_widget(form) }}
     <div class="form-group">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
             <input type="submit" value="Search" class="btn btn-primary" />
-            <a class="btn btn-primary" role="button" data-toggle="collapse" href="#controls" aria-expanded="false" aria-controls="collapseExample">Options</a>
             <a href="{{ path('work_search') }}" class="btn btn-danger">Reset</a>
             <a href="{{ path('work_index') }}" class="btn btn-warning">Cancel</a>
         </div>
