--- a/src/AppBundle/Resources/views/Work/search.html.twig
+++ b/src/AppBundle/Resources/views/Work/search.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block pageheader %} 
-    <h1>Work Search</h1>
+    <h1>Advanced Search</h1>
     {% if works|length > 0 %}
         <p class="count">
             Displaying {{ works|length }} works of {{ works.getTotalItemCount }} total.
