--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,34 +24,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{{ path('homepage') }}">Home</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Search <span class="caret"></span>
-                            </a>
-                            {{ knp_menu_render('AppBundle:Builder:searchMenu') }}
-                        </li>
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Browse <span class="caret"></span>
-                            </a>
-                            {{ knp_menu_render('AppBundle:Builder:navMenu') }}
-                        </li>
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                About <span class="caret"></span>
-                            </a>
-                            {{ knp_menu_render('NinesBlogBundle:Builder:pageNavMenu') }}
-                        </li>
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Announcements <span class="caret"></span>
-                            </a>
-                            {{ knp_menu_render('NinesBlogBundle:Builder:postNavMenu') }}
-                        </li>
+                        {{ knp_menu_render('main') }}
                         <li>
                             <a href="{{ asset('docs/html/index.html') }}">Help &amp; Docs</a>
                         </li>
