--- a/src/AppBundle/Resources/views/work/search.html.twig
+++ b/src/AppBundle/Resources/views/work/search.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block pageheader %} 
+{% block pageheader %}
     <h1>Advanced Search</h1>
     {% if works|length > 0 %}
         <p class="count">
             Displaying {{ works|length }} works of {{ works.getTotalItemCount }} total.
         </p>
     {% endif %}
-{% endblock %} 
+{% endblock %}
 
 {% block body %}
 
@@ -21,11 +21,14 @@
             <a href="{{ path('work_index') }}" class="btn btn-warning">Cancel</a>
         </div>
     </div>
-        
+
     {{ form_end(form) }}
 
     {% if works|length > 0 %}
         {% include 'AppBundle:work:workList.html.twig' with {'works': works} %}
+        <div class="navigation">
+            {{ knp_pagination_render(works) }}
+        </div>
     {% endif %}
 
 {% endblock %}
